--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.105 2007/11/02 10:57:30 bernd67 Exp $
+$Id: CHANGELOG,v 1.106 2007/11/02 15:51:46 bernd67 Exp $
 
 0.5.5 ---------------------------------------------------------------------
 
@@ -20,6 +20,18 @@ PATCHES and CLEANUPS by Bernd Petrovitsch <bernd@firmix.at>
     dependency generation and beautify (read: "$(strip)") $(CPPFLAGS).
   * OpenBSD needs an explicit "#include <sys/types.h>" before
     "#include <netinet/in.h>".
+- fixed lib/secure/src/md5.h: This was broken as it had
+  "typedef unsigned long int UINT4;". "unsigned long int" is 8 bytes on x86_64.
+  We are using now the standardized types from <inttypes.h>.
+- fixed warnings and improved lib/secure/src/md5.c:
+  * we are using memcpy() and memset() instead of the open-coded loops as
+    suggested 
+  * const'ified
+  * added function prototypes for static functions
+  * moved static functions to the top so that their declaration is before
+    their use to allow gcc to inline if only used once.
+  It remains ugly - God knows why there are that so many useless
+  type-casts.
 
 0.5.4 ---------------------------------------------------------------------
 
