--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,11 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.114 2007/11/12 00:12:15 bernd67 Exp $
+$Id: CHANGELOG,v 1.115 2007/11/14 11:08:05 bernd67 Exp $
 
 0.5.5 ---------------------------------------------------------------------
 
-BUGFIX by Hannes Gredler <hannes@gredler.at> fixing not deleted tc entry.
+BUGFIX by Hannes Gredler <hannes@gredler.at>
+- fix not deleted tc entry.
+- avoid setting routes with an invalid/impossible netmask.
 
 PATCH by John Hay <jhay@meraka.org.za>:
 - also printout our own HNAs in the dotdraw plugin.
