--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.122 2007/12/11 17:20:06 bernd67 Exp $
+$Id: CHANGELOG,v 1.123 2007/12/12 21:57:56 bernd67 Exp $
 
 0.5.5 ---------------------------------------------------------------------
 
@@ -8,6 +8,11 @@ BUGFIXES and PATCHES by Hannes Gredler <hannes@gredler.at>
 - avoid setting routes with an invalid/impossible netmask.
 - refactoring of TC parsing to kill another pile of malloc()/free()s
   saving (again) code and especially run.time performance.
+- RIB Refactoring, Part 2:
+  - avoid the periodical rib-tree insertion
+  - add a FOR_ALL_HNA_RT_ENTRIES() macro for the snmp folks
+    (or any parties who want to walk HNA entries).
+  - add an olsr_cnf option 'flat_fib_metrics' which defaults to TRUE.
 
 PATCH by John Hay <jhay@meraka.org.za>:
 - also printout our own HNAs in the dotdraw plugin.
